--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ reqwest = { version = "0.12.28", features = ["blocking", "json"] }
 rusqlite = "0.38.0"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.147"
+tracing = "0.1.44"
