--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ rusqlite = "0.38.0"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.147"
 tracing = "0.1.44"
+tracing-subscriber = "0.3.22"
